[package]
name = "haje"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shatigon = { path = "../shatigon" }
byteorder = "1.4.3"
diesel = { version = "1.4.8", features = ["postgres"]}
dotenv = "0.15.0"
log = "0.4.14"
simple_logger = "1.13.0"
shaku = "0.6.1"
